--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Vincular HTML con CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Dolar hoy</title>
+    <title>Calculadora</title>
 </head>
 <body>
 
@@ -29,27 +28,54 @@
   </header>
 
     <main>
-      <section class="div-container">
-        <div class="compras">
-          <h4>Compra online</h4>
-          <input id="precio-online" type="number" placeholder="Precio en dólares">
-          <button id="calcular-online" type="submit" class="btn btn-success">Compra Online</button>
-          <article class="article article-online"></article>
-        </div>
+        <div name="Dolares">
+            <h1>Calculadora de dólares</h1>
+            <div>
+                <label for="que-compra"> ¿Qué vas a comprar? </label>
+                <select name="que-compra" id="tipo-compra-dolares" class="form-select" aria-label="Default select example">
+                    <option value="online">Compra online en $USD</option>
+                    <option value="soja">Compra Soja</option>
+                    <option value="blue">Compra Dólar Blue</option>
+                </select>
+            </div>
 
-        <div class="compras">
-          <h4>Compra Steam</h4>
-          <input id="precio-steam" type="number" placeholder="Precio en pesos">
-          <button id="calcular-steam" type="submit" class="btn btn-success">Compra Steam</button>
-          <article class="article article-steam"></article>
-        </div>
+            <div class="input-group mb-3">
+              <span class="span-dolar input-group-text">USD$</span>
+              <input id="input-dolar" type="number" class="form-control" placeholder="Ingrese monto en dólares">
+              <button id="calcular-dolar" type="button" class="btn btn-outline-primary">Calcular</button>
+            </div>
 
-      </section>
+            <div>
+                <article id="panel-dolares" class="article dolar-final"></article>
+            </div>
+          </div>
+
+        <div name="Pesos">
+            <h2>Calculadora de compras online en pesos</h2>
+            <label for="compra-pesos">(Steam, Spotify, Netlfix, Origin)</label>
+            
+            <div class="input-group mb-3">
+              <span class="span-pesos input-group-text">ARS$</span>
+              <input id="input-pesos" type="number" class="form-control" placeholder="Ingrese monto en pesos">
+              <button id="calcular-pesos" type="button" class="btn btn-outline-primary">Calcular</button>
+            </div>
+
+            <div>
+                <article id="panel-pesos" class="article peso-final"></article>
+            </div>
+
+        </div>
 
     </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="js/calc.js"></script>
+  <script src="js/animate.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
+
+
+
